testing deploy afterinit

--- a/BizWebAPI.csproj
+++ b/BizWebAPI.csproj
@@ -9,6 +9,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <InvariantGlobalization>true</InvariantGlobalization>
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="Areas\ERP\TaskMGT\**" />
